--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,118 @@
-/* styles.css */
+/* General styles */
 html, body {
-    height: 100%; 
-    margin: 0; 
+    height: 100%;
+    margin: 0;
 }
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4; 
+    background-color: #f4f4f4;
     background-image: url("assets/bg.jpg");
     background-size: cover;
-    background-repeat: no-repeat; 
-    background-position: center; 
+    background-repeat: no-repeat;
+    background-position: center;
     color: #333;
 }
 
+/* Container styling */
 .container {
+    display: flex;
     width: 90%;
-    max-width: 600px;
-    margin: auto;
+    max-width: 1200px;
+    height: 90vh;
+    margin: 20px auto;
     padding: 20px;
-    margin-top: 10%;
     background-color: #2d2d2d;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
-h1 {
+.left-panel {
+    flex: 1;
+    padding: 20px;
+    color: #fff;
+    border-right: 1px solid #444;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+}
+
+.right-panel {
+    flex: 2;
+    padding: 20px;
+    color: #fff;
+}
+
+.profile {
     text-align: center;
 }
 
-form {
+.profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile-name {
+    margin-top: 10px;
+    font-size: 1.2em;
+}
+
+.scheduled-tasks {
+    margin-top: 20px;
+}
+
+.scheduled-tasks h3 {
+    margin-bottom: 10px;
+}
+
+.scheduled-tasks ul {
+    list-style: none;
+    padding: 0;
+}
+
+.scheduled-tasks ul li {
+    margin-bottom: 10px;
+}
+
+h1 {
+    text-align: center;
+    color: #fff;
+}
+
+#task-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Adjust gap between elements */
+}
+
+.right-side-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-input label {
+    margin-bottom: 5px;
+}
+
+.form-btn {
     display: flex;
     gap: 10px;
-    margin-bottom: 20px;
 }
 
 input {
-    flex: 1;
     padding: 10px;
     font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    flex: 1;
 }
 
 button {
@@ -58,7 +132,6 @@ button:hover {
     background-color: #28a745;
     color: #fff;
     font-size: 18px;
-    margin-left: 10px;
 }
 
 #voice-button:hover {
