--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 html, body {
     height: 100%;
     margin: 0;
+    
 }
 
 body {
@@ -12,6 +13,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     color: #333;
+    font-family: 'Nunito', sans-serif;
 }
 
 /* Container styling */
@@ -31,7 +33,7 @@ body {
     flex: 1;
     padding: 20px;
     color: #fff;
-    border-right: 1px solid #444;
+    border-right: 2px solid #444;
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
@@ -117,7 +119,7 @@ input {
 
 button {
     padding: 10px;
-    background-color: #007bff;
+    background-color: rgb(49, 135, 211);
     color: #fff;
     border: none;
     border-radius: 4px;
